src/components/skills/index.css
@reference "../../app/globals.css";

@layer components {
    .stack-layout {
        @apply flex justify-between items-center relative;
        @apply flex-col 5xl:flex-row;
    }

    .stack-cards {
        @apply grid grid-cols-1 grid-rows-1 transform-3d perspective-near;
        @apply max-w-2xl w-full p-4;
        @apply rounded-lg;
    }

    .stack-trigger {
        @apply relative;

        &:before {
            content: '';
        }

    }
    .stack-trigger:not(.button--active),
    .stack-card:not(.active) {
        &:before {
            @apply hidden;
        }
    }
    .stack-card.active,
    .stack-trigger.button--active {
        &:before {
            @apply visible;
        }
    }

    .stack-card.active,
    .stack-trigger.button--active {
        &:before {
            content: '';
            @apply w-2 h-2 rounded-full absolute my-auto bg-accent-300 z-10;
        }
    }

    .stack-trigger:before {
        @apply -right-1 translate-x-[25%];
    }

    .stack-card:before {
        @apply -left-1 top-0 bottom-0 translate-x-[25%];
    }

    .stack-controllers {
        @apply flex flex-wrap 5xl:flex-col mb-20 5xl:mb-0 gap-3;

        button {
            @apply w-fit;
        }
    }

    .stack-card {
        @apply transform-3d perspective-distant;
        @apply rounded-md p-4;

        @apply h-full transform-3d;
        @apply bg-(--surface-2) shadow-md;

        @apply col-start-1;
        @apply row-end-1;

        @apply relative;

    }

    .stack-card:before,
    .stack-trigger:before,
    .stack-overlay {
        @apply opacity-0 5xl:opacity-100;
    }

    .stack-overlay {
        @apply w-full h-full absolute top-0 right-0 left-0 bottom-0 pointer-events-none;
    }

    .stack-card-inner {
        @apply bg-(--background) rounded-md p-6 h-full;
    }
}

